main-Klasse vorbereitet
Pläne erzeugen und "sichern" funktioniert. Anzahl der Kantinen kann über
config.properties angepasst werden. Name und Anzahl Mitarbeiter müssen
in config angegeben werden.

--- a/Cantina/config.properties
+++ b/Cantina/config.properties
@@ -9,8 +9,12 @@ HitlistenPfad:data/Hitliste.csv
 # Pfad des Preislistenordner
 PreislistenOrdner:lieferanten
 #
-# Anzahl der zu erstellenden Speisepläne=Kantinen
+# Anzahl der zu erstellenden Speisepläne bzw. Kantinen
 AnzahlKantinen=2
-# Anzahl der Mitarbeiter in der 1. Kantine
+# Daten zu den einzelnen Kantinen. Bitte bei Veränderung der Kantinenanzahl weitere durchnummerierte Blöcke einfügen.
+# Kantine 1
+NameKantine1:Essen
 AnzahlKantine1:500
+# Kantine 2
+NameKantine2:Mülheim a.d. Ruhr
 AnzahlKantine2:300
